src/Components/Boards.css
.boards-container {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
  max-width: 100%;
  margin-left: 70px;
  margin-right: auto;
  gap: 10px;
  padding: 20px;
}

.board-wrapper {
  display: flex;
  flex-direction: column;
}

.board-card {
  border-radius: 16px;
  width: 280px;
  height: 180px;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  transition: transform 0.2s ease;
  background-color: white;
  overflow: hidden;
}

.board-card:hover {
  transform: scale(1.03);
}

.board-title {
  width: 280px; 
  text-align: center;
  margin-top: 10px;
  font-size: 1.5rem;
  font-family: 'Dancing Script', cursive;
}

.board-preview-layout {
  display: flex;
  width: 100%;
  height: 100%;
}

.left-preview {
  flex: 3;
}

.right-preview {
  flex: 2;
  display: flex;
  flex-direction: column;
}

.left-preview img,
.right-preview img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border: 1px solid white; 
  box-sizing: border-box;
}

.right-preview img {
  flex: 1;
}

